# qt_simple

./: CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
